<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- Manifest -->
    <string name="app_name">计然蜂巢</string>
    <string name="manifest_login">登录</string>
    <string name="manifest_main">主页</string>
    <string name="manifest_register">注册</string>
    <string name="manifest_forget_password">忘记密码</string>
    <string name="manifest_setting">设置</string>

    <!-- 通用 -->
    <string name="common_cancel">取消</string>
    <string name="common_confirm">确定</string>
    <string name="common_yes">确认</string>
    <string name="common_submit">提交</string>

    <!-- 登录 -->
    <string name="login_phone">手机一键登录</string>
    <string name="login_no_register">无需注册，直接登录</string>
    <string name="login_input_phone">输入手机号</string>
    <string name="login_sms_code">短信验证码</string>
    <string name="login_get_sms_code">获取验证码</string>
    <string name="login_button">登录</string>
    <string name="login_addition">登录即代表您同意</string>
    <string name="login_protocol">《XX用户协议手册》</string>
    <string name="login_code_error">验证码错误</string>
    <string name="login_name_repeated">用户名已被占，请更换</string>
    <string name="login_enter_app">进入APP</string>
    <string name="login_rec_star">推荐星球</string>
    <string name="login_choose_star">定制你感兴趣的主题，第一时间知晓最新消息</string>
    <string name="login_choose_and_enter">选好了，进入APP</string>

    <!-- 主页 -->
    <string name="home_tab_home">首页</string>
    <string name="home_tab_dynamic">动态</string>
    <string name="home_tab_message">消息</string>
    <string name="home_tab_user">个人</string>

    <!-- 首页/我的 -->
    <string name="home_mine_search">搜索我的星球</string>
    <string name="home_pick_star">选择星球</string>
    <string name="home_mine_search_null">未搜到相关星球</string>
    <string name="home_cancel">取消</string>
    <string name="home_star_me_host">我是主理人</string>
    <string name="home_star_me_guest">我是嘉宾</string>
    <string name="home_star_me_member">我是成员</string>
    <string name="home_star_null">加入星球后才能发表动态 你还没有加入星球</string>

    <!-- 首页/发现 -->
    <string name="home_discover_change">换一批</string>
    <string name="home_discover_dynamic">热门动态</string>
    <string name="home_discover_join">加入</string>
    <string name="home_hot_star">热门星球</string>

    <!-- 搜索 -->
    <string name="search_clear_history">清除搜索记录</string>
    <string name="search_">。。。</string>

    <!-- 分享弹窗 -->
    <string name="dialog_destination_share">分享到</string>
    <string name="dialog_to_star">转到星球</string>
    <string name="dialog_to_wechat">微信好友</string>
    <string name="dialog_to_wechat_moments">朋友圈</string>
    <string name="dialog_copy_link">复制链接</string>
    <string name="dialog_make_photo">生成图片</string>
    <string name="dialog_remove_guest">移除嘉宾</string>

    <!-- 动态列表 -->
    <string name="dynamic_join_star">加入星球</string>
    <string name="dynamic_hole_article">全文</string>
    <string name="dynamic_like">点赞</string>
    <string name="dynamic_comment">评论</string>
    <string name="dynamic_share">分享</string>
    <string name="dynamic_text_test">到https://sports.youku.com/如果您sda水电费感受到报告和认同感反而为个人体会过人头频繁我委个回去我诶妇女为偶发VB你误会个?spm=a2hww.11359951.m_26658.5~1~3!3~8!3~A静安寺浦东嘉搜谱大V分批https://www.youku.com/够个让我弄如果您sda水电费感受到报告和认同感反而为个人体会过人头频繁我欧文IER级外婆doi给那送佛前破解破壁机水平的节目评委个回去我诶妇女为偶发VB你误会个人发票个围巾批发日期能不能到货是二表哥垄断且扒肉条跟你说等你离开农村是个我和法国的节目评委个回去我诶妇女为偶发VB你误会个人发票个围巾批发日期能不能到货是二表哥垄断且扒肉条跟你说等你离开农村是个我和法国人陪你欧式地回复我IEnew陪你放屁呢【全文你未分配哪位破fine发到静安寺浦东嘉搜谱大V分批of较为频繁我欧文IER级外婆水电费感受到报告和认同感反而为个人体会过人头</string>
    <string name="dynamic_from">由</string>
    <string name="dynamic_publish">发布</string>
    <string name="dynamic_collect">收藏</string>
    <string name="dynamic_collect_cancel">取消收藏</string>
    <string name="dynamic_delete">删除</string>
    <string name="dynamic_mute_forever">永久禁言</string>
    <string name="dynamic_mute_3">禁言3天</string>
    <string name="dynamic_mute_cancel">解除禁言</string>
    <string name="dynamic_concern">关注</string>
    <string name="dynamic_concern_done">已关注</string>
    <string name="dynamic_to_elite">加入精华</string>
    <string name="dynamic_out_elite">移除精华</string>
    <string name="dynamic_sure_to">确定要将</string>
    <string name="dynamic_whether_mute_forever">永久禁言吗？</string>
    <string name="dynamic_whether_mute_3">禁言3天吗？</string>
    <string name="dynamic_been_deleted">动态已被删除</string>
    <string name="dynamic_origin_star">发表在星球</string>

    <!-- 动态正文 -->
    <string name="dynamic_detail">动态正文</string>
    <string name="dynamic_comment_yours">发表你的评论</string>
    <string name="dynamic_publish_comment">发表评论</string>
    <string name="dynamic_comment_forward">转发</string>
    <string name="dynamic_comment_like">赞</string>
    <string name="dynamic_comment_deleted">评论已删除</string>
    <string name="dynamic_comment_reply">回复</string>
    <string name="dynamic_comment_delete">删除</string>
    <string name="dynamic_comment_publish">发布</string>

    <!-- 动态正文 -->
    <string name="tweet_publish">发布动态</string>
    <string name="tweet_where">发布在</string>
    <string name="tweet_desc" tools:ignore="TypographyEllipsis">分享你的观点...</string>

    <!-- 个人主页 -->
    <string name="user_home_edit">编辑</string>
    <string name="user_home_desc_default">快来看，这人好懒哦</string>
    <string name="user_home_fans">粉丝</string>
    <string name="user_home_checking">审核中</string>
    <string name="user_open_push">开启推送</string>
    <string name="user_open_push_done">已开启推送</string>
    <string name="user_open_push_done1">已开推送</string>
    <string name="user_edit_title">编辑个人信息</string>
    <string name="user_edit_portrait">头像</string>
    <string name="user_edit_name">用户名</string>
    <string name="user_edit_desc">简介</string>
    <string name="user_edit_descs">介绍一下自己，让更多人认识你</string>

    <!-- 个人中心 -->
    <string name="user_center_star">星球</string>
    <string name="user_center_concern">关注</string>
    <string name="user_center_fans">粉丝</string>
    <string name="user_center_collect">收藏</string>
    <string name="user_center_invite">邀请好友</string>
    <string name="user_center_help">帮助与反馈</string>
    <string name="user_center_set">设置</string>
    <string name="user_no_fans">暂无粉丝</string>
    <string name="user_no_concern">暂无关注</string>
    <string name="user_concern_done">已关注</string>
    <string name="user_concern_mutual">互相关注</string>

    <!-- 设置 -->
    <string name="setting_bind_phone">绑定手机号</string>
    <string name="setting_no_phone">未绑定</string>
    <string name="setting_bind_done">已绑定</string>
    <string name="setting_bind_wechat">绑定微信</string>
    <string name="setting_star_us">给我们打分</string>
    <string name="setting_logout">退出登录</string>

    <!-- 话题星球 -->
    <string name="topic_star_detail">星球资料</string>
    <string name="topic_star_edit">编辑星球信息</string>
    <string name="topic_star_sort_default">默认排序</string>
    <string name="topic_star_sort_new">最新发布</string>
    <string name="topic_star_share">分享星球</string>
    <string name="topic_star_push_notify">推送通知</string>
    <string name="topic_star_guest">星球嘉宾</string>
    <string name="topic_star_member">星球成员</string>
    <string name="topic_star_ban">禁言名单</string>
    <string name="topic_star_invite">邀请嘉宾</string>
    <string name="topic_star_no_guest">暂无嘉宾</string>
    <string name="topic_star_out">退出星球</string>
    <string name="topic_star_checking">我们将对你的星球进行审核。审核期间，星球不能被搜索到，你仍然可以在星球内发布动态、邀请成员。</string>
    <string name="topic_star_name_hint">请输入星球名称，10字以内</string>
    <string name="topic_star_desc_hint">请输入星球介绍，80字以内</string>
    <string name="topic_star_host_guest">主理人、嘉宾</string>
    <string name="topic_star_list_member">成员</string>
    <string name="topic_star_search_member">搜索星球成员</string>
    <string name="topic_star_mute_surplus_3">禁言剩余3天</string>
    <string name="topic_star_status_host">主理人</string>
    <string name="topic_star_status_guest">嘉宾</string>
    <string name="topic_star_relieve_mute">解禁</string>
    <string name="topic_star_mute_none">暂无禁言成员</string>
    <string name="topic_star_member_null">未搜到相关成员</string>

</resources>
