<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_collect"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_white_button_selector"
        android:gravity="center"
        android:text="@string/dynamic_collect"
        android:textColor="@color/status_guest"
        android:textSize="@dimen/sp_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorGrey4" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_white_button_selector"
        android:gravity="center"
        android:text="@string/dynamic_delete"
        android:textColor="@color/textDark2"
        android:textSize="@dimen/sp_16" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/bg_white_button_selector"
        android:gravity="center"
        android:text="@string/common_cancel"
        android:textColor="@color/textDark2"
        android:textSize="@dimen/sp_16" />

</LinearLayout>