<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/statusBarSize"
        android:background="@color/white" />

    <FrameLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/img_tab_home_selected"
            android:gravity="center_horizontal"
            android:text="@string/home_tab_home"
            android:textColor="@color/textGrey"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/rb_dynamic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/img_tab_dynamic_normal"
            android:gravity="center_horizontal"
            android:text="@string/home_tab_dynamic"
            android:textColor="@color/textGrey"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/rb_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/img_tab_message_normal"
            android:gravity="center_horizontal"
            android:text="@string/home_tab_message"
            android:textColor="@color/textGrey"
            android:textSize="10sp" />


        <RadioButton
            android:id="@+id/rb_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/img_tab_user_normal"
            android:gravity="center_horizontal"
            android:text="@string/home_tab_user"
            android:textColor="@color/textGrey"
            android:textSize="10sp" />
    </RadioGroup>

</LinearLayout>