<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/statusBarSize"
        android:background="@color/white" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/login_rec_star"
        android:textColor="@color/textDark"
        android:textSize="30sp"
        android:textStyle="bold" />


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_choose_star"
        android:textColor="@color/textDark2"
        android:textSize="@dimen/sp_14" />

    <com.yh.jiran.custom.ScrollerGridView
        android:id="@+id/grid_rec_star"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="18dp"
        android:layout_weight="1"
        android:horizontalSpacing="52dp"
        android:numColumns="3"
        android:verticalSpacing="22dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_enter"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_margin="5dp"
        android:background="@drawable/bg_blue_button_selector"
        android:text="@string/login_choose_and_enter"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />

</LinearLayout>