<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/bg_home_discover">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_hot_star"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/home_hot_star"
                android:textColor="@color/textDark"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_change"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingRight="15dp"
                android:text="@string/home_discover_change"
                android:textColor="@color/textDark"
                android:textSize="14sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_star"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_hot_dynamic"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:background="@color/bg_home_discover"
            android:text="@string/home_discover_dynamic"
            android:textColor="@color/textDark"
            android:textSize="14sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_dynamic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>


</ScrollView>